tests/paczka1/small_fuzzy/19993318.err
Error in line 2: z3Ri A891 7,7
Error in line 6: S677 A891 3N7,N
Error in line 8: 82Qf A891 55,8
Error in line 1: S677 A891 82,2
Error in line 13: 82Qf A116 39,8
